--- a/client/main.scss
+++ b/client/main.scss
@@ -50,17 +50,16 @@ div.nav-bar {
 // map styling
 
 #map-container {
-  width: 800px;
   max-width: 100%;
-  height: 500px;
+  height: 80vh;
 
-  // @include breakpoint(mobile) {
-  //   padding-top: $nav-bar-height;
-  //   height: 100vh - $nav-bar-height;
-  // }
+  @include breakpoint(mobile) {
+    padding-top: $nav-bar-height;
+    // height: 100vh - $nav-bar-height;
+  }
 
-  // @include breakpoint(desktop) {
-  //   padding-top: $nav-desktop-bar-height;
-  //   height: calc(100% - $nav-desktop-bar-height);
-  // }
+  @include breakpoint(desktop) {
+    padding-top: $nav-desktop-bar-height;
+    // height: calc(100% - $nav-desktop-bar-height);
+  }
 }
