--- a/client/main.scss
+++ b/client/main.scss
@@ -81,8 +81,10 @@ div.container {
 
 // map components
 
-.address-form {
+.post-button {
   position: absolute;
   bottom: 0;
-  right: 20px;
+  left: 0;
+  padding: 10px;
+  background: red;
 }
