--- a/client/main.scss
+++ b/client/main.scss
@@ -92,6 +92,6 @@ $nav-desktop-bar-height: 150px;
   background: red;
   padding: 10px;
   right: 0;  
-  bottom: 0;
+  bottom: 5vh;
   position: absolute;
 }
