011/move map options (#4)
* added new options to move the zoom controls and hide the streetview control

* moved the post button to the right

* moved the post button up higher

* moved up the button

--- a/client/main.scss
+++ b/client/main.scss
@@ -91,7 +91,7 @@ $nav-desktop-bar-height: 150px;
 .post-button {
   background: red;
   padding: 10px;
-  left: 0;  
-  bottom: 0;
+  right: 0;  
+  bottom: 5vh;
   position: absolute;
 }
